[package]
name = "battleship"
version = "0.1.0"
authors = ["alvintzheng <alvintzheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2.0"
winit = "0.22.0"
winit_input_helper = "0.6.0"
image = "0.23.12"
rand = "0.7.3"
savefile = "0.7.4"
savefile-derive = "0.7.3"
kira = "0.5.1"